@@ -1,21 +1,21 @@
-import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.io.FileNotFoundException;
+import java.net.URI;
 import java.net.URLConnection;
+import java.net.URISyntaxException;
+import java.net.MalformedURLException;
 
 public class WordCheck {
     // This function checks if a given string is an actual word
     // Returns true if the passed word exists, otherwise false
-    public static boolean checkWord(String word) throws MalformedURLException, IOException {
-        final URLConnection dictionary = new URL("https://api.dictionaryapi.dev/api/v2/entries/en/" + word)
+    public static boolean checkWord(String word) throws MalformedURLException, IOException, URISyntaxException {
+        final URLConnection dictionary = new URI("https://api.dictionaryapi.dev/api/v2/entries/en/" + word).toURL()
                 .openConnection();
         dictionary.setReadTimeout(10000);
 
-        // If the word exists, return
+        // If the word exists, return true
         try {
-            final InputStream response = dictionary.getInputStream();
+            dictionary.getInputStream();
             return true;
         } catch (FileNotFoundException e) {
             return false;
@@ -32,7 +32,7 @@ public class WordCheck {
     // A completely successful run will print out a success message
     // The origin of the error message will likely come from the 'checkWord'
     // function
-    public static void main(String[] args) throws IOException {
+    public static void main(String[] args) throws IOException, URISyntaxException {
         String word;
 
         for (int i = 0; i < 5; i++) {
